# template-rocket-svelte-spa

./: .env.template  .gitignore  .markdownlintignore  LICENSE  LICENSE.md  README.md  update.sh
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: check.yml  combine.yml  lint-test-fmt.yml  rust-test-fmt.yml  semantic-pull-request.yml
client/: .env.template  .eslintrc.js  .pnp.cjs  .prettierrc  index.html  jest.config.js  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
client/src/: App.svelte  Tailwind.svelte  app.css  hmr.ts  index.ts  reset.css
client/src/components/: AsyncRoute.svelte  AsyncRouteGuard.svelte  Footer.svelte  LazyRoute.svelte  LazyRouteGuard.svelte  Nav.svelte
client/src/routes/: About.svelte  Home.svelte  NotFound.svelte
client/src/static/: reset.css
client/src/tests/: example.ts
client/static/: global.css
server/: .env.template  Cargo.toml  Rocket.toml  deny.toml
server/.cargo/: config.toml
server/src/: cache.rs  cors.rs  csp.rs  main.rs  postgres.rs
